--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mysten/sui.js": "^0.54.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
